--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="https://samudrawijaya.github.io/"><img src="/img/dggs.png"></a>
+            <a href="https://samudrawijaya.github.io/"><img src="/img/dgs.png"></a>
             <h3><a href="https://samudrawijaya.github.io/"><span>Samo</span>Website</a></h3>
         </div>
     </header>
