--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="image-galery">
             <a href="#gambar-1">
             <div class="image-box">
-                <img class="object" src="/img/IMG20200623204336.jpg" alt="">
+                <img class="object" src="/img/p2.jpg" alt="">
                 <div class="layer">
                     <h3>Semarang</h3>
                 </div>
