--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </a>
             <a href="#gambar-8">
                 <div class="image-box">
-                    <img class="object" src="/img/_DSC5936.jpg" alt="">
+                    <img class="object" src="/img/dgs.png" alt="">
                     <div class="layer">
                         <h3>Mana aja</h3>
                     </div>
