--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </a>
             <a href="#gambar-8">
                 <div class="image-box">
-                    <img class="object" src="/img/dgs.png" alt="">
+                    <img class="object" src="/img/p6.jpg" alt="">
                     <div class="layer">
                         <h3>Mana aja</h3>
                     </div>
@@ -133,7 +133,7 @@
         <div class="overlay" id="gambar-8">
             <a href="#galery" class="close">X close</a>
             <a href="#gambar-7" class="back">back</a>
-            <img src="/img/_DSC5936.jpg" alt="...">
+            <img src="/img/p6.jpg" alt="...">
             <a href="#gambar-1" class="next">next</a>
         </div>
     
